# optt2i

./: README.md  pyproject.toml
docs/: ranker.md  t2i.md
optt2i/: __init__.py  main.py
optt2i/prompt-optmimizer/: PROMPTS.py
optt2i/ranker/: __init__.py  base.py  clipscore.py  decomposed_clipscore.py  defaults.py  factory.py  instruct_blip_vqa.py  llm.py  main.py  utils.py  vqa.py
optt2i/ranker/builders/: __init__.py
optt2i/ranker/dsg/: __init__.py  dsg_score.py  generator.py  openai_utils.py  render_dsg_dag.py  types.py  utils.py  vqa.py
optt2i/t2i/: README.md  __init__.py  __main__.py  defaults.py  factory.py  generate.py
optt2i/t2i/builders/: __init__.py  diffusers_generic.py  qwen_image_lightning.py
tests/: test_ranker_factory.py
